# teddy-fe

./: .gitignore  README.md
scripts/CustomerSpecific/PFF/: .gitattributes  .gitignore  Makefile  README.md  main.py  pyproject.toml  snap_detection_heuristic_simple_cyu.py  video_processing_script.sh
scripts/CustomerSpecific/PFF/BasketballAnalyticsViz/: README.md  app.py  requirements.txt
scripts/CustomerSpecific/PFF/BasketballAnalyticsViz/templates/: index.html
scripts/CustomerSpecific/PFF/Flask_SAM2_Labeling/: Readme.md  app.py  requirements.txt
scripts/CustomerSpecific/PFF/Flask_SAM2_Labeling/templates/: index.html
scripts/CustomerSpecific/PFF/Football_App/: 07102025_FootballHomography.py  README.md
scripts/CustomerSpecific/PFF/Football_App/models/: modelhere.txt
scripts/CustomerSpecific/PFF/Snap/: README.md  demo.py  requirements.txt  setup.py
scripts/CustomerSpecific/PFF/Snap/snap_detection/: __init__.py  motion_analysis.py  snap_detector.py  utils.py
scripts/CustomerSpecific/PFF/SnapVideoModel/: eval.py  eval2.py  freeze.py  gt.csv  infer.py  main.py  mvit_fork.py  train.csv  val.csv  val_frozen.csv  val_frozen_16.csv
scripts/CustomerSpecific/PFF/Snapv2/: Dockerfile  README.md  app.py  requirements.txt  snap_detector.py
scripts/CustomerSpecific/PFF/Snapv2/templates/: index.html
scripts/CustomerSpecific/PFF/Snapv3/: Dockerfile  README.md  docker-compose.yml  main.py  requirements.txt  snap_detector.py
scripts/CustomerSpecific/PFF/SportsAnalytics/: README.md
scripts/CustomerSpecific/PFF/VideoSegmentation/: README.md  video_splitter.py
scripts/CustomerSpecific/PFF/auto_homography/: adaptive_config.yaml  auto_homography.py  auto_homography_test.py  example_config.yaml  plot_mot.py  union_config.yaml
scripts/CustomerSpecific/PFF/config/player_recognition/: base_config.json
scripts/CustomerSpecific/PFF/config/tracking/: idf1_emb_disapp_tracker.json  idf1_emb_disapp_tracker_reid_manual.json  idf1_emb_new_reid_optuna.json  idf1_tracker.json
scripts/CustomerSpecific/PFF/data/: readme.md
scripts/CustomerSpecific/PFF/football-ball-detection-2/: readme.md
scripts/CustomerSpecific/PFF/football-field-detection-12/: readme.md
scripts/CustomerSpecific/PFF/football-players-detection-10/: readme.md
scripts/CustomerSpecific/PFF/linefinder/: README.md  hough.cpp  lines.py  setup.py
scripts/CustomerSpecific/PFF/models/: embedder.onnx  embedder.safetensors  hash_yard.onnx  model.onnx  reid.skl  snap_model_iter_1012.pth  unified_model.onnx
scripts/CustomerSpecific/PFF/sanjay/yolov7/: loss.py  (+2 more)
scripts/CustomerSpecific/PFF/scripts/: download_videos_by_game_play_id.py  label_studio_mot_json_to_pb.py  make_aws.py  make_mot_data.py  mot_eval.py  plot_mot.py  plot_mot_video.py  recognize_player_id.py  st_snap_ui.py  train_embedder.py  train_reid.py  tune.py  upload_video_and_mot_annotations.py
scripts/CustomerSpecific/PFF/tests/: auto_homography_test.py  test_kalman_reid.py
scripts/CustomerSpecific/PFF/tracking/: pyproject.toml
scripts/CustomerSpecific/PFF/utils/: label_studio_mot_json_to_mot.py  label_studio_mot_json_to_pb.py
(+699 files in other folders)
