[project]
name = "clarifai-pff"
version = "0.1.0"
description = "Clarifai's CV solution for PFF"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "av>=15.0.0",
    "clarifai>=11.6.5",
    "clarifai-grpc>=11.5.5",
    "joblib>=1.5.1",
    "matplotlib>=3.10.3",
    "numpy>=2.0.0",
    "onnx>=1.18.0",
    "onnxruntime>=1.22.1",
    "opencv-python-headless>=4.11.0.86",
    "pillow>=11.2.1",
    "scikit-learn>=1.7.1",
    "scipy>=1.16.0",
]
[project.optional-dependencies]
gpu = [
    "onnxruntime-gpu>=1.22.0"
]

[dependency-groups]
dev = [
    "awscli>=1.41.16",
    "isort>=6.0.1",
    "label-studio-sdk>=1.0.5",
    "motmetrics",
    "opencv-python>=4.11.0.86",
    "optuna>=4.4.0",
    "pandas>=2.3.1",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.8",
    "safetensors>=0.6.2",
    "tensorboard>=2.20.0",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
]

[tool.uv.sources]
motmetrics = { git = "https://github.com/cheind/py-motmetrics.git" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/clarifai_pff"]

[tool.hatch.build.targets.sdist]
include = ["src/*"]
